--- a/css/board.css
+++ b/css/board.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    align-items: center;    
+    align-items: center;
     padding-top: 8px;
     padding-left: 234px;
     padding-right: 8px;
@@ -182,7 +182,7 @@
 
 /* taskOverLay Classes */
 
-.task-overlay-v-1{
+.task-overlay-v-1 {
     display: flex;
     width: 525px;
     padding: 48px 40px;
@@ -237,4 +237,36 @@
     align-self: stretch;
 }
 
+.assigned-circle {
+    width: 32px;
+    height: 32px;
+    border: 1px solid white;
+    border-radius: 50%;
+    display: inline-block;    
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin-right: -7px; /* Negative margin for overlap */
+}
 
+.assigned-circle-txt {
+    color: #FFF;
+    text-align: center;
+
+    /* Version 2/t7 */
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    /* 14.4px */
+}
+
+.frame-assigned-circ{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    align-self: stretch;
+    gap: -4px;
+}
