--- a/css/board.css
+++ b/css/board.css
@@ -171,11 +171,13 @@
     justify-content: center;
     align-items: center;
     background: #77889978;
+    padding: 64px 128px 128px;
+    margin-top: 15px;
 }
 
 .floatingTask {
     position: absolute;
-    top: 25%;
+    top: 0;
     width: 100%;
     height: 100vh;
 }
@@ -224,7 +226,7 @@
 .frame-215 {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 8px;
     align-self: stretch;
 }
@@ -232,9 +234,16 @@
 .frame-204 {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 4px;
     align-self: stretch;
+}
+
+.frame-crc-name {
+    display: flex;
+    align-items: center;
+    align-content: flex-start;
+    justify-content: center;
 }
 
 .assigned-circle {
@@ -242,12 +251,18 @@
     height: 32px;
     border: 1px solid white;
     border-radius: 50%;
-    display: inline-block;    
+    display: inline-block;
     display: flex;
     align-content: center;
     justify-content: center;
     align-items: center;
-    margin-right: -7px; /* Negative margin for overlap */
+    margin-right: -7px;
+    /* Negative margin for overlap */
+}
+
+.assigned-circle-fullscreen {
+    width: 42px !important;
+    height: 42px !important;
 }
 
 .assigned-circle-txt {
@@ -263,10 +278,27 @@
     /* 14.4px */
 }
 
-.frame-assigned-circ{
+.frame-assigned-circ {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     align-self: stretch;
     gap: -4px;
+}
+
+.assigned-name {
+    display: flex;
+    margin-left: 23px;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.subtasks-check {
+    display: flex;
+    height: 32px;
+    padding: 6px 16px;
+    align-items: center;
+    gap: 16px;
 }
