start whith default-contact responsive

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -21,7 +21,7 @@
 
     </div>
 
-   
+
 
     <div id="contacts" class="contacts">
       <!--<div class="contact-name-circle">
@@ -36,52 +36,56 @@
     </div>
   </div>
 
-  <div class="contacts-header-frame40">
-    <div class="contacts-header-txt-bold">Contacts</div>
-    <img src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
-    <div class="contacts-header-txt-small">Better with a team</div>
-  </div>
+  <div class="show-contact">
+    <div class="contacts-header-frame40">
+      <div class="contacts-header-txt-bold">Contacts</div>
+      <img src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
+      <div class="contacts-header-txt-small">Better with a team</div>
+    </div>
 
-  <!--View Contact-->
-  <div class="view-contact-div">
-    <div class="show-name">
-      <div class="show-name-circle">
-        <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img" />
-        <div class="show-name-circle-txt" id="iconDetail">AM</div>
-      </div>
+    <!--View Contact-->
+    <div class="view-contact-div">
+      <div class="show-name">
+        <div class="show-name-circle">
+          <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img" />
+          <div class="show-name-circle-txt" id="iconDetail">AM</div>
+        </div>
 
-      <div class="show-name-close">
-        <div class="name-container-frame81" id="nameContact">Anton Mayer</div>
-        <div class="edit-name">
-          <div onclick="initEditContact(`${globalIndexVariable}`)" id="edit-name-sub" class="edit-name-sub">
-            <img src="assed/svg/contact-imgs/edit.svg" alt="" class="edit-pen-img" />
-            <div class="edit-txt">Edit</div>
-          </div>
-          <div onclick="removeContact()" class="delete-container">
-            <img src="assed/svg/contact-imgs/delete.svg" alt="" class="delete-img" />
-            <div class="delete-txt">Delete</div>
+        <div class="show-name-close">
+          <div class="name-container-frame81" id="nameContact">Anton Mayer</div>
+          <div class="edit-name">
+            <div onclick="initEditContact(`${globalIndexVariable}`)" id="edit-name-sub" class="edit-name-sub">
+              <img src="assed/svg/contact-imgs/edit.svg" alt="" class="edit-pen-img" />
+              <div class="edit-txt">Edit</div>
+            </div>
+            <div onclick="removeContact()" class="delete-container">
+              <img src="assed/svg/contact-imgs/delete.svg" alt="" class="delete-img" />
+              <div class="delete-txt">Delete</div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="contact-information">Contact Information</div> <div id="contactNumber"></div>
+      <div class="contact-information">Contact Information</div>
+      <div id="contactNumber"></div>
 
-    <div class="information-mail-phone-div">
-      <div class="mail-div">
-        <div class="email-txt">Email</div>
-        <div class="actual-email" id="emailContact">antom@gmail.com</div>
-      </div>
-      <div class="phone-div">
-        <div class="phone-txt">Phone</div>
-        <div class="actual-phone-number" id="phoneNumer">+49 7345 5324</div>
+      <div class="information-mail-phone-div">
+        <div class="mail-div">
+          <div class="email-txt">Email</div>
+          <div class="actual-email" id="emailContact">antom@gmail.com</div>
+        </div>
+        <div class="phone-div">
+          <div class="phone-txt">Phone</div>
+          <div class="actual-phone-number" id="phoneNumer">+49 7345 5324</div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 
-<!-- add contatact img mobile -->
-<div class="add-contact-img-mobile-div">
+  <!-- add contatact img mobile -->
+  <div class="add-contact-img-mobile-div">
+
+  </div>
 
 </div>
