--- a/assed/template/header_mobile.html
+++ b/assed/template/header_mobile.html
@@ -1,8 +1,13 @@
-
-
-
-
-<div class="mobile-header">
-    <div></div>
-    <div></div>
+<div class="mobile-header ">
+    <div>
+        <img class="logo-img-mobile-header" src="assed/svg/contact-imgs/Capa 3.svg" alt="">
+    </div>
+    <div class="circle-img-mobile-header">
+        <div>
+            <img src="assed/svg/contact-imgs/Ellipse 13.svg" alt="">
+        </div>
+        <div class="circle-txt-div">
+            AB
+        </div>
+    </div>
 </div>
