--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -1,4 +1,5 @@
 <div id="header-figma" class="header-figma">
+
     <p class="frame-156-text">Kanban Project Management Tool</p>
     <div class="frame-42">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -12,19 +13,22 @@
                     fill="#A8A8A8" />
             </g>
         </svg>
-        <div class="group-5" onclick="loadSubMenu()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56">
-                <circle cx="28" cy="28" r="26.5" stroke="#2A3647" stroke-width="3" fill="none" />
-                <text class="frame-156-text" x="50%" y="50%" text-anchor="middle"
-                    alignment-baseline="middle" style="color: #29ABE2;" id="actUser">SM</text>
-            </svg>
-        </div>
-        <div id="subMenu" class="sub-menu">
+        <div id="subMenu" class="d-none">
             <div>
                 <div><a href="/datenschutzerkl.html">Legal Notice</a></div>
                 <div><a href="/datenschutzerkl.html">Privacy Policy</a></div>
                 <div><a href="/index.html">Log Out</a></div>
             </div>
         </div>
+        <div class="group-5" onclick="loadSubMenu()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56">
+                <circle cx="28" cy="28" r="26.5" stroke="#2A3647" stroke-width="3" fill="none"/>
+                <text class="frame-156-text" x="50%" y="50%" text-anchor="middle"
+                    alignment-baseline="middle" style="color: #29ABE2;" id="actUser"></text>
+            </svg>
+        </div>
+
+
     </div>
+
 </div>
