--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -1,31 +1,34 @@
 <div class="frame-40">
   <h2 class="text-t1">Add Task</h2>
+  <div class="closeDivTask d-none" id="addTaskPopCanclBtn" onclick="addTaskPopUpCls(id)">
+    <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img" />
+</div>
 </div>
 
 
 
-<form class="taskForm" id="taskForm" action="" name="taskForm" onsubmit="addTask(); updateHTML(); return false">
+<div class="taskForm" id="taskForm">
   <div class="frame-219">
     <div class="" style="width: 100%;">
-      <label for="exampleDataList" class="form-label">Topic</label>
-      <input class="form-control selectpicker" list="topicListOptions" id="taskTopic" placeholder="Type to search...">
-      <datalist id="topicListOptions">
-        <option value="User Storys"></option>
-        <option value="Technical Support"></option>
-        <option value="Coding"></option>
-      </datalist>
+      <label for="topicListOptions" class="form-label label-in-txt">Topic</label>
+      <select class="form-select selectpicker" list="topicListOptions" id="taskTopic">
+        <option value="select Topic" selected>select Topic</option>
+        <option value="User Storys">User Storys</option>
+        <option value="Technical Support">Technical Support</option>
+        <option value="Coding">Coding</option>
+      </select>
     </div>
     <div class="input-box">
-      <label for="taskTitle">Title*</label>
+      <label for="taskTitle" class="form-label label-in-txt">Title*</label>
       <input required id="taskTitle" class="form-control" />
     </div>
     <div class="input-box">
-      <label for="taskDescription" class="form-label">Description</label>
+      <label for="taskDescription" class="form-label label-in-txt">Description</label>
       <textarea required type="text" class="form-control" style="width: 100%;" rows="3" id="taskDescription"
         placeholder="Enter a Description"></textarea>
     </div>
     <div class="mt-4" style="width: 100%;">
-      <label for="exampleDataList" class="form-label">Assigned to</label>
+      <label for="exampleDataList" class="form-label label-in-txt">Assigned to</label>
       <div class="input-group mb-3">
         <input class="form-control selectpicker" list="datalistOptions" id="taskContact"
           placeholder="Type to search...">
@@ -44,12 +47,12 @@
   <!-- right side -->
   <div class="frame-39">
     <div class="input-box">
-      <label for="tastDueDate">due Date</label>
+      <label for="tastDueDate" class="form-label label-in-txt">due Date</label>
       <input required type="date" class="form-control" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
     </div>
 
     <div class="input-box">
-      <label for="prio-btngroup">Prio</label>
+      <label for="prio-btngroup" class="form-label label-in-txt">Prio</label>
       <div class="priority-button-group" id="prio-btngroup">
         <button type="button" class="priority-button priority-button-text txt-nodeco " tabindex="0" id="urgentBtn"
           onclick="selectPriority(id)">
@@ -73,31 +76,34 @@
     <input type="hidden" name="priority" id="priority-input">
 
     <div class="input-box">
-      <label for="taskCategory">Category</label>
-      <select class="input-box" required name="" id="taskCategory">
+      <label for="taskCategory" class="form-label label-in-txt">Category</label>
+      <select required class="input-box form-select task-overlay-v-1-t6" required name="" id="taskCategory">
+        <option value="select Category">select Category</option>
         <option value="To Do">To Do</option>
         <option value="In progress">In progress</option>
         <option value="Await feedback">Await feedback</option>
       </select>
     </div>
 
-    <div class="mt-4" style="width: 100%;">
-      <div class="input-group mb-3">
-        <input required type="text" id="task-input" class="form-control" placeholder="Add a subtask">
-        <div class="input-group-append">
-          <button class="btn btn-primary" form="taskForm" onclick="addSubTask(event)">Add</button>
+    
+      <div class="mt-4" style="width: 100%;">
+        <label for="task-input" class="form-label label-in-txt">Subtasks</label>
+        <div class="input-group mb-3">
+          
+          <input required type="text" id="task-input" class="form-control" placeholder="Add a subtask">
+          <div class="input-group-append">
+            <button class="btn btn-primary" form="subTask" onclick="addSubTask(event)">Add</button>
+          </div>
         </div>
       </div>
-    </div>
+    
 
     <div id="task-list">
       <!-- Existing tasks will go here -->
     </div>
     <div class="frame-29">
       <button class="button-secondary-wo-icon text-sm-btn">Clear</button>
-      <button class="button-wo-icon text-sm-btn" name="submitTask" onclick="">Add Task</button>
+      <button class="button-wo-icon text-sm-btn" name="submitTask" onclick="addTask()" id="task-Submitbutton">Add Task</button>
     </div>
   </div>
-
-
-</form>
+</div>
