responsive version of sidebar ready

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -85,7 +85,7 @@
 
   <!-- add contatact img mobile -->
   <div class="add-contact-img-mobile-div">
-
+    <img src="assed/svg/contact-imgs/Secondary mobile contact V1.svg" alt="">
   </div>
 
 </div>
