--- a/css/sidebar_mobile.css
+++ b/css/sidebar_mobile.css
@@ -1,7 +1,7 @@
 
 
 .sidebar-responsive {
-    display: flex;
+    display: none;
     height: 80px;
     width: 428px;
     position: absolute;
@@ -30,7 +30,6 @@
     gap: 4px;
     /* Padding15px, 0px, 15px, 0px;
     gap: 4px;*/
-    background-color: green;
 }
 
 .siedeMenu-img-responsive {
@@ -44,4 +43,11 @@
     font-size: 14px;
     line-height: 16.8px;
     color: #CDCDCD;
+}
+
+
+@media (max-width: 700px) {
+    .sidebar-responsive {
+        display: flex !important;
+    }
 }
