--- a/css/addContact.css
+++ b/css/addContact.css
@@ -7,13 +7,27 @@ body {
     display: none;
 }
 
+.overlay-add-contact-outer-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;;
+}
+
 .overlay-add-contact {
     width: 1221px;
     height: 592px;
-    top: -2901px;
-    left: 42px;
+    /*top: -2901px;
+    left: 42px;*/
+    position: absolute;
     border-radius: 30px;
     background-color: #FFFFFF;
+    z-index: 30 !important;
 }
 
 .close-div {
@@ -305,7 +319,8 @@ body {
     height: 73px;
     font-family: inter;
     font-weight: 700;
-    font-size: 61px;
+    /*font-size: 61px;*/
+    font-size: 59px;
     line-height: 73.2px;
     color: white;
 }
