--- a/css/contactsDefault.css
+++ b/css/contactsDefault.css
@@ -1,4 +1,7 @@
-
+.contacts {
+    left: 260px;
+    position: absolute;
+}
 
 .generalcontacts-frame97 {
     position: absolute;
@@ -193,6 +196,10 @@
     color: #007CEE;
 }
 
+
+
+
+/* Show Contact */
 .contacts-header-frame40 {
     position: absolute;
     width: 569px;
