addContact overlay responsive ready; show list of contacts responsive ready

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -22,7 +22,7 @@
     </div>
 
      <!-- add contatact img mobile -->
-  <div class="add-contact-img-mobile-div">
+  <div id="add-contact-img-mobile-div" onclick="displayNone('contacts', 'add'), displayNone('overlay-add-contact', 'remove'), displayNone('add-contact-img-mobile-div', 'add')" class="add-contact-img-mobile-div">
     <img src="assed/svg/contact-imgs/Secondary mobile contact V1.svg" alt="">
   </div>
 
