--- a/css/contactsDefault.css
+++ b/css/contactsDefault.css
@@ -133,6 +133,10 @@
     display: flex;
     align-items: center;
     padding-left: 36px;
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
 }
 
 .vector-10 {
@@ -461,6 +465,7 @@
 .add-contact-img-mobile-div {
     display: none;
     position: absolute;
+    z-index: 400;
     width: 56px;
     height: 56px;
     top: 678px;
