progress viev contact responsive

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="show-contact">
+  <div id="show-contact" class="show-contact">
     <div class="contacts-header-frame40">
       <div class="contacts-header-txt-bold">Contacts</div>
       <img src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
@@ -51,7 +51,7 @@
     </div>
 
     <!--View Contact-->
-    <div class="view-contact-div">
+    <div id="view-contact-div" class="view-contact-div">
       <div class="show-name">
         <div class="show-name-circle">
           <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img" />
