progress show contact responsive

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -46,7 +46,7 @@
   <div id="show-contact" class="show-contact">
     <div class="contacts-header-frame40">
       <div class="contacts-header-txt-bold">Contacts</div>
-      <img src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
+      <img class="contacts-header-img" src="assed/svg/contact-imgs/Vector 5.svg" alt="" />
       <div class="contacts-header-txt-small">Better with a team</div>
     </div>
 
