--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -87,6 +87,19 @@
         </div>
       </div>
     </div>
+
+
+    <!-- Arrow-left (only for responsive) -->
+    <div onclick="displayNone('show-contact', 'add'),displayNone('contacts', 'remove'), displayNone('add-contact-img-mobile-div', 'remove');" class="arrow-left-for-responsive">
+      <img class="arrow-left-for-responsive-img" src="assed/svg/contact-imgs/arrow-left-line.svg" alt="">
+    </div>
+
+    <!-- Menu contact options (only for responsive) -->
+    <div class="add-contact-img-mobile-div menu-contact-options-responsive">
+      <img src="assed/svg/contact-imgs/Menu Contact options.svg" alt="">
+    </div>
+
+
   </div>
 
 
