--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -95,7 +95,7 @@
     </div>
 
     <!-- Menu contact options (only for responsive) -->
-    <div class="add-contact-img-mobile-div menu-contact-options-responsive">
+    <div onclick="displayNone('overlay-add-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'add'), displayNone('cancel-create-contact', 'add'), displayNone('edit-contact', 'remove')" id="edit-contact-img-mobile-div" class="add-contact-img-mobile-div menu-contact-options-responsive">
       <img src="assed/svg/contact-imgs/Menu Contact options.svg" alt="">
     </div>
 
